Fixed the instuction images being selected when clicked on Firefox

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,11 @@
 img[draggable="false"] {
     -webkit-user-drag: none;
             user-drag: none;
+
+    -webkit-user-select: none;
+       -moz-user-select: none;
+	-ms-user-select: none;
+	    user-select: none;
 }
 
 /* Large/Desktop */
